--- a/src/app/directives/form-item/form-item.html
+++ b/src/app/directives/form-item/form-item.html
@@ -1,4 +1,4 @@
-<div class="form-item-container" class="md-inline-form">
+<div class="form-item-container md-inline-form">
 
   <div class="form-item-actions">
     <md-button class="md-button" ng-if="FormItem.Attrs.onDelete" ng-click="FormItem.deleteClicked()">
