--- a/src/app/directives/input-item/input-item.html
+++ b/src/app/directives/input-item/input-item.html
@@ -7,5 +7,6 @@
   <md-select ng-model="Input.item.config.type">
     <md-option value="text">Text</md-option>
     <md-option value="number">Number</md-option>
+    <md-option value="email">Email</md-option>
   </md-select>
 </md-input-container>
