--- a/src/app/directives/radio-button-item/radio-button-item.html
+++ b/src/app/directives/radio-button-item/radio-button-item.html
@@ -1,7 +1,7 @@
 <div class="sortable-container" layout="column" sv-root sv-part="RadioButton.item.options">
 
   <md-switch ng-model="RadioButton.item.config.direction" ng-true-value="'horizontal'" ng-false-value="'vertical'">
-    Layout direction ({{RadioButton.item.config.direction == 'horizontal' ? 'Horizontal' : 'Vertical'}})
+    Layout direction ({{RadioButton.item.config.direction == 'horizontal' ? 'Vertical': 'Horizontal' }})
   </md-switch>
 
   <div class="option-item" layout="row" ng-repeat="option in RadioButton.item.options track by $index" sv-element>
