added label item

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -57,6 +57,10 @@ form-view {
     font-size: 18px;
   }
 
+  .formItem-content {
+    font-size: 18px;
+  }
+
   .formItem-help-text {
     font-size: 14px;
     color: #6c6c6c;
