--- a/src/app/directives/form-item/form-item.html
+++ b/src/app/directives/form-item/form-item.html
@@ -12,17 +12,18 @@
     </md-button>
   </div>
 
-  <md-input-container class="md-block">
+  <md-input-container ng-if="FormItem.item.type != 'label'" class="md-block">
     <label>Field Title</label>
     <input ng-model="FormItem.item.props.title"/>
   </md-input-container>
 
-  <md-input-container class="md-block">
+  <md-input-container ng-if="FormItem.item.type != 'label'" class="md-block">
     <label>Help Text</label>
     <input ng-model="FormItem.item.props.helpText" />
   </md-input-container>
 
   <div ng-switch="FormItem.item.type">
+    <label-item ng-switch-when="label" item="FormItem.item"></label-item>
     <input-item ng-switch-when="input" item="FormItem.item"></input-item>
     <radio-button-item ng-switch-when="multipleChoices" item="FormItem.item"></radio-button-item>
     <matrix-item ng-switch-when="matrix" item="FormItem.item"></matrix-item>
@@ -32,7 +33,7 @@
     <p ng-switch-default>UNKNOWN TYPE</p>
   </div>
 
-  <md-input-container class="md-block">
+  <md-input-container ng-if="FormItem.item.type != 'label'" class="md-block">
     <md-checkbox ng-model="FormItem.item.config.required">Required field</md-checkbox>
   </md-input-container>
 
