--- a/src/app/directives/form-view/form-view.html
+++ b/src/app/directives/form-view/form-view.html
@@ -11,6 +11,7 @@
         <textarea-view form-item="formItem" form="formItemForm" ng-switch-when="textarea"></textarea-view>
         <matrix-view form-item="formItem" is-preview="true" form="formItemForm" ng-switch-when="matrix"></matrix-view>
         <select-view form-item="formItem" is-preview="true" form="formItemForm" ng-switch-when="chooseFromList"></select-view>
+        <label-view form-item="formItem" is-preview="true" form="formItemForm" ng-switch-when="label"></label-view>
       </div>
     </ng-form>
   </div>
