--- a/src/app/directives/checkboxes-item/checkboxes-item.html
+++ b/src/app/directives/checkboxes-item/checkboxes-item.html
@@ -11,7 +11,7 @@
   <div class="option-item" layout="row" ng-repeat="option in Checkboxes.item.options track by $index" sv-element>
 
     <md-button class="md-button handle" md-no-ink aria-label="reorder option item" sv-handle>
-      <i class="material-icons">reorder</i>
+      <md-icon md-font-set="material-icons"> reorder </md-icon>
     </md-button>
 
     <md-input-container class="md-block">
@@ -20,7 +20,7 @@
     </md-input-container>
 
     <md-button class="md-button" ng-click="Checkboxes.deleteOption($index)">
-      <i class="material-icons">delete</i>
+      <md-icon md-font-set="material-icons"> delete </md-icon>
     </md-button>
 
   </div>
