--- a/src/app/directives/radio-button-item/radio-button-item.html
+++ b/src/app/directives/radio-button-item/radio-button-item.html
@@ -7,7 +7,7 @@
   <div class="option-item" layout="row" ng-repeat="option in RadioButton.item.options track by $index" sv-element>
 
     <md-button class="md-button handle" md-no-ink aria-label="reorder option item" sv-handle>
-      <i class="material-icons">reorder</i>
+      <md-icon md-font-set="material-icons"> reorder </md-icon>
     </md-button>
 
     <md-input-container class="md-block">
@@ -16,10 +16,10 @@
     </md-input-container>
 
     <md-button class="md-button md-warn" ng-click="RadioButton.deleteOption($index)">
-      <i class="material-icons">delete</i>
+      <md-icon md-font-set="material-icons"> delete </md-icon>
     </md-button>
 
   </div>
 
-  <md-button class="md-raised md-accent" ng-click="RadioButton.addOption()">Add Option</md-button>
+  <md-button class="md-raised md-accent" ng-click="RadioButton.addOption()"> Add Option </md-button>
 </div>
