--- a/src/app/directives/select-item/select-item.html
+++ b/src/app/directives/select-item/select-item.html
@@ -3,7 +3,7 @@
   <div class="option-item" layout="row" ng-repeat="option in Select.item.options track by $index" sv-element>
 
     <md-button class="md-button handle" md-no-ink aria-label="reorder option item" sv-handle>
-      <md-icon md-font-set="material-icons"> reorder </md-icon>
+      <md-icon md-font-icon="icon-reorder"> reorder </md-icon>
     </md-button>
 
     <md-input-container class="md-block">
@@ -12,7 +12,7 @@
     </md-input-container>
 
     <md-button class="md-button md-warn" ng-click="Select.deleteOption($index)">
-      <md-icon md-font-set="material-icons"> delete </md-icon>
+      <md-icon md-font-icon="icon-delete"> delete </md-icon>
     </md-button>
 
   </div>
