--- a/src/app/directives/form-item/form-item.html
+++ b/src/app/directives/form-item/form-item.html
@@ -2,13 +2,13 @@
 
   <div class="form-item-actions">
     <md-button class="md-button" ng-if="FormItem.Attrs.onDelete" ng-click="FormItem.deleteClicked()">
-      <md-icon md-font-set="material-icons small"> delete </md-icon>
+      <md-icon md-font-icon="icon-delete small"> delete </md-icon>
     </md-button>
     <md-button class="md-button" ng-if="FormItem.Attrs.onUp" ng-click="FormItem.onUp({item: FormItem.item, index: FormItem.index()})">
-      <md-icon md-font-set="material-icons small"> arrow_drop_up </md-icon>
+      <md-icon md-font-icon="icon-arrow-drop-up small"> arrow_drop_up </md-icon>
     </md-button>
     <md-button class="md-button" ng-if="FormItem.Attrs.onDown" ng-click="FormItem.onDown({item: FormItem.item, index: FormItem.index()})">
-      <md-icon md-font-set="material-icons small"> arrow_drop_down </md-icon>
+      <md-icon md-font-icon="icon-arrow-drop-down small"> arrow_drop_down </md-icon>
     </md-button>
   </div>
 
