--- a/src/app/directives/form-item/form-item.html
+++ b/src/app/directives/form-item/form-item.html
@@ -2,7 +2,7 @@
 
   <div class="form-item-actions">
     <md-button class="md-button" ng-if="FormItem.Attrs.onDelete" ng-click="FormItem.deleteClicked()">
-      <md-icon md-font-icon="icon-delete small"> delete </md-icon>
+      <i class="material-icons small">delete</i>
     </md-button>
     <md-button class="md-button" ng-if="FormItem.Attrs.onUp" ng-click="FormItem.onUp({item: FormItem.item, index: FormItem.index()})">
       <md-icon md-font-icon="icon-arrow-drop-up small"> arrow_drop_up </md-icon>
