--- a/src/app/directives/checkboxes-item/checkboxes-item.html
+++ b/src/app/directives/checkboxes-item/checkboxes-item.html
@@ -10,8 +10,8 @@
 
   <div class="option-item" layout="row" ng-repeat="option in Checkboxes.item.options track by $index" sv-element>
 
-    <md-button class="md-button handle" md-no-ink aria-label="reorder option item" sv-handle>
-      <md-icon md-font-icon="icon-reorder"> reorder </md-icon>
+    <md-button class="md-button handle" md-no-ink aria-label="option item" sv-handle>
+      <md-icon md-font-icon="icon-drag-horizontal"></md-icon>
     </md-button>
 
     <md-input-container class="md-block">
@@ -19,12 +19,14 @@
       <input ng-model="option.value" />
     </md-input-container>
 
-    <md-button class="md-button" ng-click="Checkboxes.deleteOption($index)">
-      <md-icon md-font-icon="icon-delete"> delete </md-icon>
+    <md-button class="md-button md-warn" ng-click="Checkboxes.deleteOption($index)">
+      <md-icon md-font-icon="icon-delete"></md-icon>
     </md-button>
 
   </div>
   <div layout="row" layout-align="start">
-    <md-button class="md-primary add-option-button" ng-click="Checkboxes.addOption()">Add Option</md-button>
+    <md-button class="md-primary add-option-button" ng-click="Checkboxes.addOption()">
+      <md-icon md-font-icon="icon-plus"></md-icon>
+    </md-button>
   </div>
 </div>
