--- a/src/app/directives/matrix-item/matrix-item.html
+++ b/src/app/directives/matrix-item/matrix-item.html
@@ -1,8 +1,8 @@
 <div class="sortable-container columnContainer" layout="column" sv-root sv-part="Matrix.item.config.columns">
   <div class="option-item" layout="row" ng-repeat="column in Matrix.item.config.columns track by $index" sv-element>
 
-    <md-button class="md-button handle" md-no-ink aria-label="reorder option item" sv-handle>
-      <md-icon md-font-icon="icon-reorder"> reorder </md-icon>
+    <md-button class="md-button handle" md-no-ink aria-label="option item" sv-handle>
+      <md-icon md-font-icon="icon-drag-horizontal"></md-icon>
     </md-button>
 
     <md-input-container class="input-container">
@@ -10,8 +10,8 @@
       <input ng-model="column.value" />
     </md-input-container>
 
-    <md-button class="md-button" md-no-ink aria-label="delete column item" ng-click="Matrix.deleteColumn($index)">
-      <md-icon md-font-set="material-icons"> delete </md-icon>
+    <md-button class="md-button" md-no-ink aria-label="column item" ng-click="Matrix.deleteColumn($index)">
+      <md-icon md-font-icon="icon-delete"></md-icon>
       <md-tooltip md-autohide="true">Delete</md-tooltip>
     </md-button>
 
@@ -25,8 +25,8 @@
 <div class="sortable-container rowContainer" layout="column" sv-root sv-part="Matrix.item.config.rows">
   <div class="option-item" layout="row" ng-repeat="row in Matrix.item.config.rows track by $index" sv-element>
 
-    <md-button class="md-button handle" md-no-ink aria-label="reorder row item" sv-handle>
-      <md-icon md-font-icon="icon-reorder"> reorder </md-icon>
+    <md-button class="md-button handle" md-no-ink aria-label="row item" sv-handle>
+      <md-icon md-font-icon="icon-drag-horizontal"></md-icon>
     </md-button>
 
     <md-input-container class="input-container">
@@ -34,8 +34,8 @@
       <input ng-model="row.value" />
     </md-input-container>
 
-    <md-button class="md-button" md-no-ink aria-label="delete row item" ng-click="Matrix.deleteRow($index)">
-      <md-icon md-font-icon="icon-delete"> delete </md-icon>
+    <md-button class="md-button" md-no-ink aria-label="row item" ng-click="Matrix.deleteRow($index)">
+      <md-icon md-font-icon="icon-delete"></md-icon>
       <md-tooltip md-autohide="true">Delete</md-tooltip>
     </md-button>
 
