--- a/src/app/directives/select-item/select-item.html
+++ b/src/app/directives/select-item/select-item.html
@@ -2,8 +2,8 @@
 
   <div class="option-item" layout="row" ng-repeat="option in Select.item.options track by $index" sv-element>
 
-    <md-button class="md-button handle" md-no-ink aria-label="reorder option item" sv-handle>
-      <md-icon md-font-icon="icon-reorder"> reorder </md-icon>
+    <md-button class="md-button handle" md-no-ink aria-label="option item" sv-handle>
+      <md-icon md-font-icon="icon-drag-horizontal"></md-icon>
     </md-button>
 
     <md-input-container class="md-block">
@@ -12,10 +12,12 @@
     </md-input-container>
 
     <md-button class="md-button md-warn" ng-click="Select.deleteOption($index)">
-      <md-icon md-font-icon="icon-delete"> delete </md-icon>
+      <md-icon md-font-icon="icon-delete"></md-icon>
     </md-button>
 
   </div>
 
-  <md-button class="md-raised md-accent" ng-click="Select.addOption()">Add Option</md-button>
+  <md-button class="md-raised md-accent" ng-click="Select.addOption()">
+    <md-icon md-font-icon="icon-plus"></md-icon>
+  </md-button>
 </div>
