--- a/src/app/directives/agreement-item/agreement-view.html
+++ b/src/app/directives/agreement-item/agreement-view.html
@@ -1,9 +1,9 @@
 <md-input-container>
   <div layout="{{AgreementView.formItem.config.direction == 'horizontal' ? 'column' : 'row'}}">
-    <md-checkbox ng-model="AgreementView.formItem.props.optionText"
+    <md-checkbox ng-model="AgreementView.formItem.options[0].selected"
                  ng-change="AgreementView.toggleSelectedOption(option)"
                  ng-disabled="AgreementView.disableOptions && !option.selected"
-                 aria-label="...">{{AgreementView.formItem.props.optionText}}</md-checkbox>
+                 aria-label="...">{{AgreementView.formItem.options[0].value}}</md-checkbox>
   </div>
 
   <div ng-messages="AgreementView.form.$error">
